# search

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  act_test.py  api.Dockerfile  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  logging-api.yaml  logging-bot.yaml  logging.yaml  pyproject.toml  settings.compose.yaml  settings.example.yaml  settings.schema.yaml  settings.test.example.yaml  settings.test.yaml  test.py
.github/: dependabot.yaml
.github/workflows/: build-docker.yaml  deploy.yaml  pre-commit.yaml  run-tests.yaml  tests.yaml
deploy/: docker-entrypoint.sh
lance_data/chunks_CampusLifeEntry.lance/_transactions/: 0-0255de97-191f-463c-b9f3-52c0d6bf6899.txn  0-e3c7aeb5-71e8-44b6-a770-95102d9fe34d.txn
lance_data/chunks_CampusLifeEntry.lance/_versions/: 1.manifest
lance_data/chunks_CampusLifeEntry.lance/data/: 39bea142-c571-440c-8297-ae2e420f965f.lance
lance_data/chunks_EduWikiEntry.lance/_transactions/: 0-6cb4adce-2007-40a6-9bc8-77be297653ad.txn  0-9a8de3fa-46a4-4bdc-9aa6-5efc104e4bc3.txn
lance_data/chunks_EduWikiEntry.lance/_versions/: 1.manifest
lance_data/chunks_HotelEntry.lance/_transactions/: 0-46f8fdfa-2094-43f4-9e82-5949503adcd8.txn  0-5715632f-9a72-4000-b852-3dbd7faa5907.txn
lance_data/chunks_HotelEntry.lance/_versions/: 1.manifest
lance_data/chunks_HotelEntry.lance/data/: ddb8c1c9-b0f1-4f80-81bd-30bbf2dbc87d.lance
redis/: Dockerfile  redis.conf
scripts/: preparse_sources.py  preparse_sources_mongodb.py  run_tests.sh  scheduler.py  search_result_metrics.py
src/: config.py  config_schema.py  custom_pydantic.py  exceptions.py  scheduler.py
src/api/: __main__.py  app.py  dependencies.py  docs.py  lifespan.py  logging_.py  routers.py
src/api/auth/: dependencies.py  routes.py
src/api/search/: routes.py  schemas.py
src/compute_service/: __main__.py  app.py  bm25.py  cache.py  chunker.py  gensim_preprocessing.py  prepare.py  search.py  text.py
src/ml_service/: __main__.py  actions.py  app.py  chunker.py  config.py  db_utils.py  docs.py  infinity.py  lifespan.py  llm.py  models.py  non_infinity.py  openai_tools.py  prepare.py  prompt.py  rag.py  search.py  storage_utils.py  text.py
src/modules/: innohassle_accounts.py  resources_types_enum.py  sources_enum.py
src/modules/act/: openai_tools.py  repository.py  routes.py  schemas.py
src/modules/act/music_room/: routes.py  schemas.py
src/modules/ask/: repository.py  routes.py  schemas.py
src/modules/auth/: dependencies.py
src/modules/campus_life/: __main__.py  art_clubs.md  base.py  clubs.md  clubs.py  handbook.py  handbook2023.md  hobby_clubs.md  routes.py  sport_clubs.md  tech_clubs.md
src/modules/chat/: routes.py  schemas.py
src/modules/compute/: routes.py  schemas.py
src/modules/dorms/: __main__.py  converter.py  scraper.py
src/modules/dorms/campus_site/: campus_en.md  dokumenty.md  en_contacts.md  en_dokumenty.md  en_roomfund.md  en_studentaccommodation.md  studentaccommodation.md  zayavkanabronirovanie.md
src/modules/eduwiki/: eduwiki_content.md  generate_md.py  parser.py
src/modules/maps/: get_maps.py  maps.md
src/modules/minio/: repository.py  schemas.py
src/modules/ml/: ml_client.py  schemas.py
src/modules/moodle/: repository.py  routes.py  schemas.py  utils.py
src/modules/parsers/: routes.py
src/modules/parsers/campus_life/: __main__.py  base.py  clubs.py  handbook.py  parser.py
src/modules/parsers/clubs/: __main__.py  parser.py
src/modules/parsers/eduwiki/: parser.py
src/modules/parsers/hotel/: __main__.py  converter.py  parser.py  scraper.py
src/modules/parsers/maps/: parser.py
src/modules/parsers/residents/: parser.py
src/modules/search/: repository.py  routes.py  schemas.py
src/modules/static_resources/: food.yaml  innohassle.yaml  ithelp.yaml  load_data.py  myuni.yaml  resources.yaml
src/modules/telegram/: routes.py  schemas.py
src/modules/tokens/: repository.py
src/repositories/: innohassle_accounts.py
src/repositories/minio/: repository.py
src/repositories/tokens/: repository.py
src/schemas/: __init__.py  auth.py  user.py
src/schemas/pyrogram/: __init__.py  chat.py  enums.py  message.py
src/storages/: minio.py
src/storages/mongo/: __init__.py  ask_statistics.py  campus_life.py  chat.py  clubs.py  edu_wiki.py  hotel.py  innohassle.py  maps.py  moodle.py  myuni.py  residents.py  resources.py  statistics.py  storage.py  telegram.py
src/storages/s3/: minio.py
tests/: conftest.py  search_repository_test.py
tests/integration/: search_to_ml_test.py
tests/unit/: minio_repository_test.py
