[project]
name = "innohassle-search"
version = "0.1.0"
description = "Search service for InNoHassle ecosystem"
authors = [{ name = "Nikita", email = "n.sannikov@innopolis.university" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "apscheduler>=3.11.0,<4",
    "authlib>=1.3.0,<2",
    "beanie>=1.26.0,<3",
    "beautifulsoup4>=4.13.4,<5",
    "colorlog>=6.8.2,<7",
    "cryptography>=43.0.1,<46",
    "fastapi>=0.115.13,<0.117",
    "fake-useragent>=2.2.0,<3",
    "httpx>=0.27.0,<0.29",
    "markdownify>=1.1.0,<2",
    "minio>=7.2.7,<8",
    "motor>=3.4.0,<4",
    "pre-commit>=3.6.2,<5",
    "pydantic>=2.7.4,<3",
    "python-multipart>=0.0.10,<0.0.21",
    "pyyaml>=6.0.1,<7",
    "requests>=2.32.4,<3",
    "ruff>=0.12.0,<0.13",
    "types-pyyaml>=6.0.12.20240311,<7",
    "uvicorn>=0.32,<0.36",
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=6.2.1,<7",
    "sentencepiece>=0.1.99",
    "openai>=1.96.1",
    "gunicorn>=23.0.0",
    "unicorn>=2.1.3",
]

[dependency-groups]
ml = [
    "chonkie[all]>=1.0.10,<2",
    "einops>=0.8.1,<0.9",
    "lance>=1.2.1,<2",
    "pandas>=2.3.0,<3",
    "infinity-client>=0.0.76,<0.0.77",
    "lancedb>=0.24.0,<0.25",
    "pylance>=0.31.0b1,<0.33",
    "lingua-language-detector>=2.1.1",
]

[tool.uv]
package = false
default-groups = ["ml"]

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
    "PLR",
    "UP046"
]
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415"]
target-version = "py312"
