[project]
name = "search"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "apscheduler>=3.11.0",
    "authlib>=1.6.5",
    "beanie>=1.30.0,<3.0.0",
    "beautifulsoup4>=4.13.4",
    "colorlog>=6.8.2",
    "cryptography>=43.0.1",
    "fastapi>=0.115.13",
    "fake-useragent>=2.2.0",
    "httpx>=0.27.0",
    "markdownify>=1.1.0",
    "minio>=7.2.7",
    "motor>=3.4.0",
    "pre-commit>=3.6.2",
    "pydantic>=2.7.4",
    "python-multipart>=0.0.10",
    "pyyaml>=6.0.1",
    "requests>=2.32.4",
    "ruff>=0.12.0",
    "types-pyyaml>=6.0.12.20240311",
    "uvicorn>=0.32",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "sentencepiece>=0.1.99",
    "openai>=1.96.1",
    "gunicorn>=23.0.0",
    "unicorn>=2.1.3",
]

[dependency-groups]
ml = [
    "chonkie[all]>=1.0.10,<2",
    "einops>=0.8.1,<0.9",
    "lance>=1.2.1,<2",
    "pandas>=2.3.0,<3",
    "infinity-client>=0.0.76,<0.0.78",
    "lancedb>=0.24.0,<0.26",
    "pylance>=0.31.0b1,<0.40",
    "lingua-language-detector>=2.1.1",
]

[tool.uv]
default-groups = ["ml"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py311"
